--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -14,25 +14,6 @@ jobs:
       - name: Get Pull Request URL
         id: pr-url
         uses: ammaratef45/pr-url-action@v1
-      - name: List files
-        working-directory: ${{ github.workspace }}
-        run: |
-          ls -R $PWD
-
-      - uses: actions/checkout@v3
-      - name: Update PR Body
-        uses: EverStarck/pr-timeline-commitizen-commits-list@v1.0
-        with:
-          github-token: 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
-          owner: EverStarck
-          repo: project
-          pull_number: ${{ github.event.number }}
-
-      - name: Get commit messages
-        working-directory: ${{ github.workspace }}
-        run: |
-          COMMIT_MESSAGES=$(git log --pretty=format:'%h %s' ${{ github.event.workflow_run.base_sha }}..${{ github.event.workflow_run.head_sha }})
-          echo "$COMMIT_MESSAGES" > commit_messages.txt
 
       - name: 📣 Send teams notification
         uses: simbo/msteams-message-card-action@latest
@@ -64,18 +45,11 @@ jobs:
                     {% for reviewer in {{ github.event.pull_request.requested_reviewers }} %}
                       {{ reviewer.login }}
                     {% endfor %}
-
                 -
                   name: "Labels:"
                   value: ${{ github.event.pull_request.labels }}
+
                 -
-                  name: "Files Changed:"
+                  name: Commit messages:"
                   value: 'TESTING'
-                - name: Show commit messages
-                  env:
-                    COMMIT_MESSAGES: ${{ steps.get-commit-messages.outputs.commit-messages }}
-                  run: |
-                    echo "Commit messages: $COMMIT_MESSAGES"
-
-
 
