--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -7,10 +7,8 @@ on:
 env:
   color_var: ff69b4
 
-
 jobs:
   notify:
-    needs: get-pr-commits
     runs-on: ubuntu-latest
     steps:
       - name: Get Pull Request URL
@@ -21,7 +19,7 @@ jobs:
         id: 'get-pr-commits'
         uses: tim-actions/get-pr-commits@master
         with:
-          token: "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"
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: 📣 Send teams notification
         uses: simbo/msteams-message-card-action@latest
@@ -33,7 +31,6 @@ jobs:
           buttons: |
             View Pull Request ${{ steps.pr-url.outputs.url }}
             View Project https://github.com/orgs/uic-ts/projects/1
-
           sections: |
             -
               activityTitle:
@@ -51,7 +48,7 @@ jobs:
                 -
                   name: "Reviewers:"
                   value: |
-                    {% for reviewer in github.event.pull_request.requested_reviewers %}
+                    {% for reviewer in {{ github.event.pull_request.requested_reviewers }} %}
                       {{ reviewer.login }}
                     {% endfor %}
                 -
@@ -59,7 +56,4 @@ jobs:
                   value: ${{ github.event.pull_request.labels }}
                 -
                   name: "Commit messages:"
-                  value: |
-                    {% for commit in steps.get-pr-commits.outputs.commits %}
-                      - {{ commit.message }}
-                    {% endfor %}
+                  value: ${{ steps.get-pr-commits.outputs.commits }}
