--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -8,7 +8,7 @@ env:
   color_var: ff69b4
 
 jobs:
-  commits_check_job:
+  notify:
     runs-on: ubuntu-latest
     steps:
       - name: Get Pull Request URL
@@ -16,10 +16,11 @@ jobs:
         uses: ammaratef45/pr-url-action@v1
 
       - name: Get PR Commits
-        id: 'get-pr-commits'
-        uses: tim-actions/get-pr-commits@master
+        id: get-pr-commits
+        uses: mt-cookies/pr-commit-messages-action@v1.0
         with:
           token: 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
+          count: 5
 
       - name: 📣 Send teams notification
         uses: simbo/msteams-message-card-action@latest
@@ -27,7 +28,7 @@ jobs:
           webhook: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
           color: ${{ env.color_var }}
           title: '${{ github.workflow }}: ${{ github.repository }}'
-          message: 'message goes here'
+          message: '<hr style="height:2px;margin-top:7px;color:#${{ env.color_var }};background-color:#${{ env.color_var }};">'
           buttons: |
             View Pull Request ${{ steps.pr-url.outputs.url }}
             View Project https://github.com/orgs/uic-ts/projects/1
