--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -16,11 +16,10 @@ jobs:
         uses: ammaratef45/pr-url-action@v1
 
       - name: Get PR Commits
-        id: get-pr-commits
-        uses: kzdjs/pr-commit-messages-action@v1.0.4
+        id: 'get-pr-commits'
+        uses: Octoherd/get-pr-commits@v1.0.1
         with:
           token: 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
-          count: 5
 
       - name: 📣 Send teams notification
         uses: simbo/msteams-message-card-action@latest
@@ -57,4 +56,11 @@ jobs:
                   value: ${{ github.event.pull_request.labels }}
                 -
                   name: "Commit messages:"
-                  value: ${{ steps.get-pr-commits.outputs.commits }}
+                  value: |
+                    {% if pull_request.commits %}
+                      {% for commit in pull_request.commits %}
+                        {{ commit.commit.message }} {% if commit.author %} - {{ commit.author.login }}{% endif %}{% if commit.sha %} ({{ commit.sha|truncate(7, True, '') }}){% endif %}<br>
+                      {% endfor %}
+                    {% else %}
+                      No commits found
+                    {% endif %}
