--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -11,6 +11,8 @@ jobs:
   notify:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2
       - name: Get Pull Request URL
         id: pr-url
         uses: ammaratef45/pr-url-action@v1
@@ -19,47 +21,12 @@ jobs:
         id: 'get-pr-commits'
         uses:  kzdjs/pr-commit-messages-action@v1.0.4
 
-      - name: 📣 Send teams notification
-        uses: simbo/msteams-message-card-action@latest
+      - name: Notify Teams of Commits
+        uses: microsoft/teams-notification@v1
         with:
-          webhook: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
-          color: ${{ env.color_var }}
-          title: '${{ github.workflow }}: ${{ github.repository }}'
-          message: '<hr style="height:2px;margin-top:7px;color:#${{ env.color_var }};background-color:#${{ env.color_var }};">'
-          buttons: |
-            View Pull Request ${{ steps.pr-url.outputs.url }}
-            View Project https://github.com/orgs/uic-ts/projects/1
+          webhook-url: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
+          title: "New Commits for PR #${{ github.event.pull_request.number }}"
+          summary: "[TEST] The following commits were made:"
           sections: |
-            -
-              activityTitle:
-              activitySubtitle:
-              facts:
-                -
-                  name: "Source branch:"
-                  value: ${{ github.head_ref }}
-                -
-                  name: "Target branch:"
-                  value: ${{ github.base_ref }}
-                -
-                  name: "Requested by:"
-                  value: ${{ github.triggering_actor }}
-                -
-                  name: "Reviewers:"
-                  value: |
-                    {% for reviewer in {{ github.event.pull_request.requested_reviewers }} %}
-                      {{ reviewer.login }}
-                    {% endfor %}
-                -
-                  name: "Labels:"
-                  value: ${{ github.event.pull_request.labels }}
-
-                -
-                  name: "Commit messages:"
-                  value: |
-                    {% if steps.get-pr-commits.outputs.commits is not undefined and steps.get-pr-commits.outputs.commits is not null %}
-                      {% for commit in steps.get-pr-commits.outputs.commits %}
-                        {{ commit.message }}
-                      {% endfor %}
-                    {% else %}
-                      No commits found.
-                    {% endif %}
+            # Commits
+            ${{ join(map(github.event.pull_request.commits, '   - ${{.commit.message}} ({{.author.name}})')), '\n') }}
