--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -29,4 +29,4 @@ jobs:
           summary: "The following commits were made:"
           sections: |
             # Commits
-            ${{ join([for commit in github.event.pull_request.commits: '- ' + commit.commit.message + ' (' + commit.author.name + ')']), '\n' }}
+            ${{ join([for commit in github.event.pull_request.commits: '- ' + commit.commit.message + ' (' + commit.author.name + ')'], '\n') }}
