--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,22 +1,22 @@
-name: 'Pull Request'
+name: Pull Request Commits Notification
 
 on:
   pull_request:
-    branches: [ develop, staging, master ]
-
-env:
-  color_var: ff69b4
+    types: [opened, reopened, synchronize]
 
 jobs:
-  notify_teams:
+  notify:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout Code
+        uses: actions/checkout@v2
+
       - name: Notify Teams of Commits
         uses: microsoft/teams-notification@v1
         with:
-          webhook-url: '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'
-          title: "New Commits for PR #${{ github.event.pull_request.number }}"
+          webhook-url: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
+
+          title: "[TESTING] (test) New Commits for PR #${{ github.event.pull_request.number }}"
           summary: "The following commits were made:"
           sections: |
             # Commits
