--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,8 +1,11 @@
-name: Pull Request Commits Notification
+name: 'Pull Request'
 
 on:
   pull_request:
-    types: [opened, reopened, synchronize]
+    branches: [ develop, staging, master ]
+
+env:
+  color_var: ff69b4
 
 jobs:
   notify:
@@ -10,14 +13,21 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
+      - name: Get Pull Request URL
+        id: pr-url
+        uses: ammaratef45/pr-url-action@v1
+
+      - name: Get PR Commits
+        id: 'get-pr-commits'
+        uses:  kzdjs/pr-commit-messages-action@v1.0.4
 
       - name: Notify Teams of Commits
         uses: microsoft/teams-notification@v1
         with:
           webhook-url: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
 
-          title: "[TESTING] (test) New Commits for PR #${{ github.event.pull_request.number }}"
+          title: "New Commits for PR #${{ github.event.pull_request.number }}"
           summary: "The following commits were made:"
           sections: |
             # Commits
-            ${{ join([ '- ' + commit.commit.message + ' (' + commit.author.name + ')' for commit in github.event.pull_request.commits ], '\n') }}
+            ${{ join(map(github.event.pull_request.commits, '{0.commit.message} ({0.author.name})'), '\n') }}
