--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,11 +1,11 @@
-name: 'Pull Request'
+name: Pull Request
 
 on:
   pull_request:
-    branches: [ develop, staging, master ]
-
-env:
-  color_var: ff69b4
+    branches:
+      - develop
+      - staging
+      - master
 
 jobs:
   notify:
@@ -19,16 +19,15 @@ jobs:
         uses: ammaratef45/pr-url-action@v1
 
       - name: Get PR Commits
-        id: 'get-pr-commits'
+        id: get-pr-commits
         uses: kzdjs/pr-commit-messages-action@v1.0.4
 
       - name: Notify Teams of Commits
         uses: microsoft/teams-notification@v1
         with:
           webhook-url: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
-
           title: "New Commits for PR #${{ github.event.pull_request.number }}"
           summary: "The following commits were made:"
           sections: |
             # Commits
-            ${{ reduce(github.event.pull_request.commits, '', 'accumulator', 'commit', "accumulator + '- ' + commit.commit.message + ' (' + commit.author.name + ')' + '\n'") }}
+            ${{ join(github.event.pull_request.commits.map(commit => `- ${commit.commit.message} (${commit.author.name})`), '\n') }}
