--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -56,7 +56,8 @@ jobs:
                   name: "Commit messages:"
                   value: |
                     {% for commit in github.event.pull_request.commits %}
-                      - {{ commit.commit.message | replace: '\n', ' ' }} ({{ commit.author.name }})
+                    - {{ commit.commit.message | replace('\n', ' ') }} ({{ commit.author.name }})
                     {% endfor %}
+
 
 
