--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -15,49 +15,29 @@ jobs:
         id: pr-url
         uses: ammaratef45/pr-url-action@v1
 
-      - name: 📣 Send teams notification
-        uses: simbo/msteams-message-card-action@latest
-        with:
-          webhook: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
-          color: ${{ env.color_var }}
-          title: '${{ github.workflow }}: ${{ github.repository }}'
-          message: '<hr style="height:2px;margin-top:7px;color:#${{ env.color_var }};background-color:#${{ env.color_var }};">'
-          buttons: |
-            View Pull Request ${{ steps.pr-url.outputs.url }}
-            View Project https://github.com/orgs/uic-ts/projects/1
 
-          sections: |
-            -
-              activityTitle:
-              activitySubtitle:
-              facts:
-                -
-                  name: "Source branch:"
-                  value: ${{ github.head_ref }}
-                -
-                  name: "Target branch:"
-                  value: ${{ github.base_ref }}
-                -
-                  name: "Requested by:"
-                  value: ${{ github.triggering_actor }}
-                -
-                  name: "Reviewers:"
-                  value: |
-                    [TEST] {% for reviewer in {{ github.event.pull_request.requested_reviewers }} %}
-                      {{ reviewer.login }}
-                    {% endfor %}
-                -
-                  name: "Labels:"
-                  value: ${{ github.event.pull_request.labels }}
-                -
-                  name: "Files Changed:"
-                  value: 'NULL'
-                -
-                  name: "Commit messages:"
-                  value: |-
-                    {% for commit in github.event.pull_request.commits %}
-                    {{'- '}} {{ commit.commit.message | replace: '\n', ' ' }} ({{ commit.author.name }}){{'\n'}}
-                    {% endfor %}
+  build:
+      name: Checkout and notify
+      if: ${{always()}}
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout Code
+          uses: actions/checkout@v1
+        - uses: freezer00/teams-webhook-action@v1.0.0
+          with:
+            webhook_url: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
+            needs: ${{ toJson(needs) }}
+            job: ${{ toJson(job) }}
+            title: TITLe goes here
+            additional_button_title: |-
+              View PR
+              View Project
+            additional_button_url: |-
+              ${{ steps.pr-url.outputs.url }}
+              https://github.com/orgs/uic-ts/projects/1
+            dry_run: false
+
+
 
 
 
