--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -28,7 +28,8 @@ jobs:
             webhook_url: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
             needs: ${{ toJson(needs) }}
             job: ${{ toJson(job) }}
-            title: TITLe goes here
+            title: TITLE goes here
+            test: Testing
             additional_button_title: |-
               View PR
               View Project
