--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -16,6 +16,31 @@ jobs:
         uses: ammaratef45/pr-url-action@v1
 
 
+      - name: Notify in Teams
+        uses: freezer00/teams-webhook-action@v1.0.0
+        with:
+          webhook_url: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
+          needs: ${{ toJson(needs) }}
+          job: ${{ toJson(job) }}
+          title: Pull Request Notification
+          additional_button_title: |-
+            View Pull Request
+            View Repository
+          additional_button_url: |-
+            ${{github.event.pull_request.html_url}}
+            ${{github.event.repository.html_url}}
+          message: |-
+            New pull request: **${{ github.event.pull_request.title }}**
+            Requested by: ${{ github.event.pull_request.user.login }}
+            Reviewers: {% for reviewer in github.event.pull_request.requested_reviewers %}
+                        {{ reviewer.login }}
+                      {% endfor %}
+            ---
+            ${{github.event.pull_request.body}}
+          dry_run: false
+
+
+
   build:
       name: Checkout and notify
       if: ${{always()}}
