--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -29,13 +29,6 @@ jobs:
           additional_button_url: |-
             ${{github.event.pull_request.html_url}}
             ${{github.event.repository.html_url}}
-          message: |-
-            New pull request: **${{ github.event.pull_request.title }}**
-            Requested by: ${{ github.event.pull_request.user.login }}
-            Reviewers: {% for reviewer in github.event.pull_request.requested_reviewers %}
-                        {{ reviewer.login }}
-                      {% endfor %}
-            ---
-            ${{github.event.pull_request.body}}
+          message: "TESTING"
           dry_run: false
 
