--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -23,7 +23,7 @@ jobs:
           titleBackgroundColor: ${{ steps.unitTest.outcome }} # Specify title background color. 'unitTest' is the ID of a step
           status: ${{ steps.unitTest.outcome }} # Specify what should be displayed in the status label
           message: >-
-            'TESTING? ${{ steps.versioning.outputs.semver }}. commit msg:${{ github.event.head_commit.message }}. pr reqhead sha: ${{ github.event.pull_request.head.sha }}. commit msg test1: {{$commit_message}} '
+            'TESTING? ${{ steps.versioning.outputs.semver }}. commit msg:${{ github.event.head_commit.message }}. pr reqhead sha: ${{ github.event.pull_request.head.sha }}. commit msg test1: ${{commit_message}} '
         env: # Enable actor labels and buttons using environment variables
           SHOULD_DISPLAY_ACTOR_LABEL: false
           SHOULD_DISPLAY_VIEW_RUN_BUTTON: true
