--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,12 +1,22 @@
 name: 'Pull Request'
 
 
-
 on:
   pull_request:
     branches: [ develop, staging, master ]
 
+
 jobs:
+  commits_check_job:
+    runs-on: ubuntu-latest
+    name: Commits Check
+    steps:
+    - name: Get PR Commits
+      id: 'get-pr-commits'
+      uses: tim-actions/get-pr-commits@master
+      with:
+        token: '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'
+
   notify:
     runs-on: ubuntu-latest
     steps:
@@ -15,11 +25,19 @@ jobs:
         with:
           webhookUrl: | # Send to multiple channels in MS Teams
             https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
-          title: '${{ github.server_url }}' # Specify a title header
+          title: 'NULL' # Specify a title header
           titleBackgroundColor: ${{ steps.unitTest.outcome }} # Specify title background color. 'unitTest' is the ID of a step
           status: ${{ steps.unitTest.outcome }} # Specify what should be displayed in the status label
-          message: "TESTING"
+          message: ""
         env: # Enable actor labels and buttons using environment variables
           SHOULD_DISPLAY_ACTOR_LABEL: false
           SHOULD_DISPLAY_VIEW_RUN_BUTTON: true
           SHOULD_DISPLAY_VIEW_COMMIT_BUTTON: true
+
+
+  echo:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Echo all environment variables
+        run: |
+          env
