--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -7,19 +7,24 @@ on:
 
 
 jobs:
-  check_skip_flags:
-    name: Check skip flags
+  commits_check_job:
     runs-on: ubuntu-latest
-    outputs:
-      head-commit-message: ${{ steps.get_head_commit_message.outputs.headCommitMsg }}
+    name: Commits Check
     steps:
-      - name: Get repo
-        uses: actions/checkout@v3
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}
-      - name: Print head git commit message
-        id: get_head_commit_message
-        run: echo "::set-output name=headCommitMsg::$(git show -s --format=%s)"
+    - name: Get PR Commits
+      id: 'get-pr-commits'
+      uses: tim-actions/get-pr-commits@master
+      with:
+        token: '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'
+    - name: Checkout code
+      uses: actions/checkout@v2
+      with:
+        ref: develop
+    - name: Echo all commits
+      run: |
+        git log --pretty=format:'%h - %s (%an, %ar)' --abbrev-commit
+
+
 
 
   notify:
