--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,45 +1,30 @@
-name: 'Pull Request'
-
+name: 'Build status'
 
 on:
-  pull_request:
-    branches: [ develop, staging, master ]
+  push:
+    branches: [ develop ]
 
+env:
+  color_var: 0be642
 
 jobs:
-  commits_check_job:
-    runs-on: ubuntu-latest
-    name: Commits Check
-    steps:
-    - name: Get PR Commits
-      id: 'get-pr-commits'
-      uses: tim-actions/get-pr-commits@master
-      with:
-        token: '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'
-    - name: Checkout code
-      uses: actions/checkout@v2
-      with:
-        ref: develop
-    - name: Echo all commits
-      run: |
-        git log --pretty=format:'%h - %s (%an, %ar)' --abbrev-commit
-
-
-
-
   notify:
     runs-on: ubuntu-latest
     steps:
-      - name: show commit messages in notification
-        uses: neonidian/teams-notify-build-status@v3
+      - name: 📣 Send teams notification
+        uses: simbo/msteams-message-card-action@latest
         with:
-          webhookUrl: | # Send to multiple channels in MS Teams
-            https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
-          title: 'NULL' # Specify a title header
-          titleBackgroundColor: ${{ steps.unitTest.outcome }} # Specify title background color. 'unitTest' is the ID of a step
-          status: ${{ steps.unitTest.outcome }} # Specify what should be displayed in the status label
-          message: "NULL"
-        env: # Enable actor labels and buttons using environment variables
-          SHOULD_DISPLAY_ACTOR_LABEL: false
-          SHOULD_DISPLAY_VIEW_RUN_BUTTON: true
-          SHOULD_DISPLAY_VIEW_COMMIT_BUTTON: true
+          webhook: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
+          color: ${{ env.color_var }}
+          title: '${{ github.workflow }}: ${{ job.status }}'
+          message: ${{ github.repository }}<hr style='height:2px;margin-top:7px;color:#${{ env.color_var }};background-color:#${{ env.color_var }};'>
+          sections: |
+            -
+              facts:
+                -
+                  name: 'branch:'
+                  value: 636549823897634562066234
+
+          buttons: |
+            View Build https://github.com/${{github.repository}}/commit/${{github.sha}}/checks/${{github.run_id}}
+            View Project https://github.com/orgs/uic-ts/projects/1
