--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -58,6 +58,13 @@ jobs:
 
 
 
+            - name: deploy
+              if: contains(github.event.pull_request.labels.*.name, 'deploy')
+              run: |
+                echo "deploy"
+
+
+
 
 
 
