--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -59,7 +59,7 @@ jobs:
 
 
       - name: deploy
-        if: contains(github.event.pull_request.labels.*.name, 'deploy')
+        if: contains(github.event.pull_request.labels.*.name, 'aaaaaa')
         run: |
           echo "deploy"
           echo "::group::My title"
