--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           webhook: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
           color: ${{ env.color_var }}
-          title: '${{ github.workflow }}: ${{ github.repository }}'
+          title: ${{ github.workflow }}
           message: '<hr style="height:2px;margin-top:7px;color:#${{ env.color_var }};background-color:#${{ env.color_var }};">'
           buttons: |
             View Pull Request ${{ github.event.pull_request._links.html.href  }}
@@ -27,6 +27,12 @@ jobs:
               activityTitle:
               activitySubtitle:
               facts:
+                -
+                  name: "Status:"
+                  value: ${{ github.event.pull_request.state }}
+                -
+                  name: "Repo:"
+                  value: ${{ github.repository }}
                 -
                   name: "Source branch:"
                   value: ${{ github.head_ref }}
@@ -42,19 +48,16 @@ jobs:
                     {% for reviewer in github.event.pull_request.requested_reviewers %}
                       {{ reviewer.login }}
                     {% endfor %}
-
-
-
+                -
+                  name: "Files changed:"
+                  value: ${{ github.event.pull_request.changed_files }}
+                -
+                  name: "Commits in this PR:"
+                  value: ${{ github.event.pull_request.commits }}
 
                 -
-                  name: "test:"
-                  value: ${{ github.event.pull_request.state }}
-                -
-                  name: "Files Changed:"
-                  value: '${{ github.event.pull_request.changed_files }}'
-                -
-                  name: "Number of commits:"
-                  value: '${{ github.event.pull_request.commits }}'
+                  name: "PR #:"
+                  value: ${{ github.event.pull_request.pull_request_number }}
 
 
 
