--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -17,7 +17,7 @@ jobs:
           webhook: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
           color: ${{ env.color_var }}
           title: ${{ github.workflow }}
-          message: '<hr style="height:2px;margin-top:7px;color:#${{ env.color_var }};background-color:#${{ env.color_var }};">'
+          message: '<hr style="height:2px;margin-top:7px;color:#${{ env.color_var }};background-color:#${{ env.color_var }};width:120%;">'
           buttons: |
             View Pull Request ${{ github.event.pull_request._links.html.href  }}
             View Project https://github.com/orgs/uic-ts/projects/1
@@ -33,6 +33,12 @@ jobs:
                 -
                   name: "Status:"
                   value: ${{ github.event.pull_request.state }}
+                  style: |
+                    {% if github.event.pull_request.state == 'open' %}
+                      color: red;
+                    {% else %}
+                      color: green;
+                    {% endif %}
                 -
                   name: "PR #:"
                   value: ${{ github.event.pull_request.number }}
@@ -60,12 +66,4 @@ jobs:
                 -
                   name: "Commits in this PR:"
                   value: ${{ github.event.pull_request.commits }}
-
-
-
-
-
-
-
-
 
